package DesignPatterns.BehavioralType.State;

public abstract class State {

    public abstract void deductMoney();

    public abstract boolean lottery();

    public abstract void dispensePrize();
}
